--- a/www/src/data/sidebars/project-links.yaml
+++ b/www/src/data/sidebars/project-links.yaml
@@ -4,3 +4,5 @@
     link: /docs/projects/midterm-project-1
   - title: Midterm Project 2 
     link: /docs/projects/midterm-project-2   
+  - title: Final Project
+    link: /docs/projects/final-project   
